# advent-of-code-23

./: .gitignore  CMakeLists.txt
01/: .gitignore  CMakeLists.txt  fuckthis.exe.stackdump
01/src/: main.c
02/: Makefile  main.exe.stackdump
02/src/: main.c
03/src/: main.c
04/src/: input.txt  sample.txt
06/: main.exe.stackdump
06/src/: main.c
helper/: Makefile  array_helper.c  array_helper.h  assert_helper.c  assert_helper.h  debug_helper.c  debug_helper.h  file_helper.c  file_helper.h  helpers.h  math_helper.c  math_helper.h  misc_helper.c  misc_helper.h  string_helper.c  string_helper.h
